# fastapi-backend-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.agents/skills/fastapi-backend-template/: SKILL.md
.agents/skills/fastapi-backend-template/agents/: openai.yaml
.github/workflows/: ci.yml
.zed/: debug.json  settings.json  tasks.json
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: demo_users.py  health.py  system.py
app/core/: application.py  config.py  errors.py  exceptions.py  http_status.py  logger.py  request_context.py  response_catalog.py
app/db/: session.py
app/middleware/: __init__.py  cors.py  request_logging.py  setup.py
app/models/: __init__.py  base.py  demo_user.py
app/repositories/: demo_user_repository.py
app/schemas/: __init__.py  api_response.py  demo_user.py  system.py
app/services/: health.py
migrations/: env.py  script.py.mako
migrations/versions/: 20260513_0001_create_demo_user.py
scripts/: check.sh
tests/: __init__.py  conftest.py  test_api_exceptions.py  test_app_smoke.py  test_config.py  test_db_session.py  test_demo_users_api.py  test_logger.py
