[project]
name = "fastapi-backend-template"
version = "0.1.0"
description = "Reusable FastAPI backend template."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncmy>=0.2.10",
    "fastapi>=0.136.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.uv]
package = false

[tool.basedpyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "PT", "RUF", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
